--- a/items/templates/items/base.html
+++ b/items/templates/items/base.html
@@ -37,7 +37,7 @@
 
   <div class="menu">
     <a href="{% url 'items_search' %}">Pesquisar</a>
-    <a href="{% url 'itemsAuditLog' %}">Histórico</a>
+    <a href="{% url 'items-auditLog' %}">Histórico</a>
     <a href="{% url 'items_dashboard' %}">Dashboard</a>
     <a class="button_logout" href="{% url 'login' %}">SAIR</a>
   </div>
