--- a/items/staticfiles/css/items-auditLog.css
+++ b/items/staticfiles/css/items-auditLog.css
@@ -2,6 +2,7 @@ main {
   padding: 40px;
   display: flex;
   align-items: center;
+  flex-direction: column; /* Garante que elementos fiquem empilhados em telas pequenas */
 }
 
 main .btn {
@@ -9,11 +10,15 @@ main .btn {
 }
 
 h1 {
-  width: 100%;
+  width: 80%;
   margin-top: 30px;
   text-align: center;
   font-weight: 400;
-  
+  margin-bottom: 30px;
+}
+
+.form-search {
+  width: 80%;
 }
 
 .download-button {
@@ -34,7 +39,7 @@ h1 {
 }
 
 table {
-  width: 100%;
+  width: 80%;
   border-collapse: collapse;
   margin-top: 10px;
 }
@@ -48,7 +53,6 @@ thead th {
   font-weight: 500;
 }
 
-
 tbody td {
   font-size: 20px;
   padding: 10px;
@@ -56,51 +60,70 @@ tbody td {
   text-align: center;
 }
 
-
 tbody tr:nth-child(even) {
   background-color: #f2f2f2;
 }
-
 
 tbody tr:hover {
   background-color: #e0e0e0;
 }
 
-
-@media (max-width: 768px) {
-  table {
-      width: 100%;
-      font-size: 14px;
+/* Responsividade para telas menores */
+@media (max-width: 1024px) {
+  h1, .form-search, table {
+    width: 90%;
   }
 
-  thead, tbody, th, td, tr {
-      display: block;
-      width: 100%;
-  }
-
-  thead {
-      display: none;
+  thead th {
+    font-size: 22px;
   }
 
   tbody td {
-      text-align: right;
-      position: relative;
-      padding-left: 50%;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  h1, .form-search, table {
+    width: 100%;
   }
 
-  tbody td::before {
-      content: attr(data-label);
-      position: absolute;
-      left: 0;
-      width: 50%;
-      padding-left: 10px;
-      font-weight: bold;
-      text-align: left;
-      color: #333;
+  main {
+    padding: 20px;
   }
 
-  tbody tr {
-      margin-bottom: 10px;
-      border-bottom: 2px solid #ddd;
+  .download-button {
+    padding-left: 0;
+  }
+
+  thead th {
+    font-size: 20px;
+    padding: 8px;
+  }
+
+  tbody td {
+    font-size: 16px;
+    padding: 8px;
+  }
+}
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: 24px;
+    margin-top: 20px;
+  }
+
+  .download-button .btn {
+    padding: 8px 16px;
+  }
+
+  thead th {
+    font-size: 18px;
+    padding: 6px;
+  }
+
+  tbody td {
+    font-size: 14px;
+    padding: 6px;
   }
 }
