--- a/items/templates/items/base.html
+++ b/items/templates/items/base.html
@@ -2,56 +2,63 @@
 
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>{% block title %}Gerenciamento de Almoxarifado{% endblock %}</title>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <title>{% block title %}Gerenciamento de Almoxarifado{% endblock %}</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  
-  <script src="{% static 'js/funcoes.js' %}"></script>
-  {% block extra_styles %}
-  {% endblock %}
-</head>
-<body>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
- 
+    <script src="{% static 'js/funcoes.js' %}"></script>
+    {% block extra_styles %} {% endblock %}
+  </head>
+  <body>
+    <header>
+      <a class="din" href="{% url 'items_main' %}">
+        <img
+          class="logo-din"
+          src="{% static 'img/logo-din.png' %}"
+          alt="Logo"
+        />
+      </a>
 
-  <header>
-    <a class="din" href="{% url 'items_main' %}">
-      <img class="logo-din" src="{% static 'img/logo-din.png' %}" alt="Logo">
-    </a>
+      <a class="uem" href="{% url 'items_main' %}">
+        <img
+          class="logo-uem"
+          src="{% static 'img/logo-uem.png' %}"
+          alt="Logo"
+        />
+      </a>
+    </header>
 
-    <a class="uem" href="{% url 'items_main' %}">
-      <img class="logo-uem" src="{% static 'img/logo-uem.png' %}" alt="Logo">
-    </a>
-  </header>
-  
+    <div class="menu">
+      <a href="{% url 'items_search' %}">Pesquisar</a>
+      <a href="{% url 'items-auditLog' %}">Histórico</a>
+      <a href="{% url 'items_dashboard' %}">Dashboard</a>
+      <a class="button_logout" href="{% url 'login' %}">SAIR</a>
+    </div>
 
-  <div class="menu">
-    <a href="{% url 'items_search' %}">Pesquisar</a>
-    <a href="{% url 'items-auditLog' %}">Histórico</a>
-    <a href="{% url 'items_dashboard' %}">Dashboard</a>
-    <a class="button_logout" href="{% url 'login' %}">SAIR</a>
-  </div>
+    <main>{% block content %} {% endblock %}</main>
 
+    <script src="{% static 'js/funcoes.js' %}"></script>
 
-  
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
-
-  <script src="{% static 'js/funcoes.js' %}"></script>
-  
-  {% block extra_scripts %}
-  {% endblock %}
-</body>
+    {% block extra_scripts %} {% endblock %}
+  </body>
 </html>
