--- a/items/templates/items/items_search.html
+++ b/items/templates/items/items_search.html
@@ -1,83 +1,127 @@
-{% extends 'items/base.html' %}
+{% extends 'items/base.html' %} {% load static %} {% block title %}Pesquisar
+itens{% endblock %} {% block extra_styles %}
+<link rel="stylesheet" href="{% static 'css/items_search.css' %}" />
+{% endblock %} {% block content %}
 
-{% load static %}
+<!-- Botão para abrir o formulário de pesquisa -->
+<button id="searchButton" onclick="toggleSearchForm()" class="search-bar">
+  <i class="fas fa-search"></i> Pesquisar Itens
+</button>
 
-{% block title %}Pesquisar itens{% endblock %}
-{% block extra_styles %}
-  <link rel="stylesheet" href="{% static 'css/items_search.css' %}">
-{% endblock %}
+<!-- Barra de pesquisa oculta inicialmente -->
+<div id="searchFormContainer" style="display: none">
+  <form class="form-search" method="GET" action="{% url 'items_search' %}">
+    <h1>Pesquisar itens cadastrados no sistema</h1>
 
-{% block content %} 
-    
+    <input
+      type="text"
+      name="name"
+      placeholder="Informe o nome do item"
+      value="{{ query|default_if_none:'' }}"
+    />
+    <input
+      type="text"
+      name="brand"
+      placeholder="Informe o nome da marca do item"
+      value="{{ query|default_if_none:'' }}"
+    />
+    <input
+      type="text"
+      name="model"
+      placeholder="Informe o nome do modelo do item"
+      value="{{ query|default_if_none:'' }}"
+    />
+    <input
+      type="text"
+      name="category"
+      placeholder="Informe o nome da categoria do item"
+      value="{{ query|default_if_none:'' }}"
+    />
 
-    <div class="expandable-list">
+    <button type="submit" class="btn btn-save">Buscar item</button>
+    <a href="{% url 'items_search' %}" class="btn btn-cancelar"
+      >Cancelar busca</a
+    >
+    <a
+      href="?download_pdf=1{% if name %}&name={{ name }}{% endif %}{% if brand %}&brand={{ brand }}{% endif %}{% if model %}&model={{ model }}{% endif %}{% if category %}&category={{ category }}{% endif %}"
+      class="btn btn-download"
+    >
+      Baixar PDF
+    </a>
+  </form>
+</div>
 
-        <h1> Pesquisar item que estão cadastrados dentro do sistema </h1>
+<div class="expandable-list">
+  {% if message %}
+  <p class="alert-init">{{ message }}</p>
 
-        <!-- Barra de pesquisa -->
-        <form class="form-search" method="GET" action="{% url 'items_search' %}">
-            
-            <input type="text" name="name" placeholder="Informe o nome do item" value="{{ query|default_if_none:'' }}">
-            <input type="text" name="brand" placeholder="Informe o nome da marca do item" value="{{ query|default_if_none:'' }}">
-            <input type="text" name="model" placeholder="Informe o nome do modelo do item" value="{{ query|default_if_none:'' }}">
-            <input type="text" name="category" placeholder="Informe o nome da categoria do item" value="{{ query|default_if_none:'' }}">
+  {% else %} {% for item in results %}
 
-            <button type="submit" class="btn btn-save">Buscar item</button>
-            <a href="?download_pdf=1{% if name %}&name={{ name }}{% endif %}{% if brand %}&brand={{ brand }}{% endif %}{% if model %}&model={{ model }}{% endif %}{% if category %}&category={{ category }}{% endif %}" class="btn btn-save">
-                Baixar PDF
-            </a>
-            <a href = "{% url "items_search" %}" class = "btn btn-cancelar"> Cancelar busca </a>      
-            
-        </form>
+  <div class="item">
+    <div class="content">
+      <div class="item-row">
+        <div class="dados_items">
+          <div class="description">
+            <p><span>Entrada no estoque:</span></p>
+            <p>{{item.create_at}}</p>
+            <p><span>Nome:</span> {{ item.name }}</p>
+            <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
+            <p><span>Marca:</span> {{item.brand}}</p>
+            <p><span>Modelo:</span> {{item.model}}</p>
+            <p>
+              <span>Tombo(s):</span> {% for tombo in item.tombos.all %}{{
+              tombo.tombo }}{% endfor %}
+            </p>
+          </div>
+        </div>
 
-        {% if message %}
-            <p class="alert-init">{{ message }}</p>
-        
-        {% else %}
+        <div class="menu-container">
+          <button class="menu-btn" onclick="toggleMenuPagSub(event)">
+            &#x22EE;
+          </button>
 
-            {% for item in results %}
-
-                <div class="item">
-
-                    <div class="content">
-
-                        <div class="item-row">
-
-                            <div class="dados_items">
-
-                                <div class="description">
-
-                                    <p><span>Entrada no estoque:</span></p>
-                                    <p>{{item.create_at}}</p>
-                                    <p><span>Nome:</span> {{ item.name }}</p>
-                                    <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
-                                    <p><span>Marca:</span> {{item.brand}}</p>
-                                    <p><span>Modelo:</span> {{item.model}}</p>
-                                    <p><span>Tombo(s):</span> {% for tombo in item.tombos.all %}{{ tombo.tombo }}{% endfor %}</p>
-                                
-                                </div>
-
-                            </div>
-
-                            <div class="menu-container">
-
-                                <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
-                                
-                                <div class="menu-content" id="menuDropdown">
-                                    
-                                    <a href="{% url 'items_ficha' item.pk %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
-                                    <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
-                                    <a href="{% url 'items_delete' item.pk %}" class="btn btn-delete">Excluir</a>
-                                    <a href="{% url 'items_form_retirar' item.pk %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
-                                </div>
-
-                            </div> 
-                        </div>
-                    </div>
-                </div>
-            {% empty %}
-                <p class="alert-init"> Nenhum item relacionado a informação inserido na pesquisa. </p>
-            {% endfor %}
-        {% endif %}       
+          <div class="menu-content" id="menuDropdown">
+            <a href="{% url 'items_ficha' item.pk %}" class="btn btn-visualizar"
+              >Visualizar Ficha Tecnica</a
+            >
+            <a href="{% url 'items_update' item.pk %}" class="btn btn-edit"
+              >Editar</a
+            >
+            <a href="{% url 'items_delete' item.pk %}" class="btn btn-delete"
+              >Excluir</a
+            >
+            <a
+              href="{% url 'items_form_retirar' item.pk %}"
+              class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}"
+              name="action"
+              value="retirar"
+              >Retirar</a
+            >
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  {% empty %}
+  <p class="alert-init">
+    Nenhum item relacionado a informação inserido na pesquisa.
+  </p>
+  {% endfor %} {% endif %}
+</div>
+
+<script>
+  function toggleSearchForm() {
+    const formContainer = document.getElementById("searchFormContainer");
+    const searchButton = document.getElementById("searchButton");
+
+    // Toggle exibição do formulário
+    if (formContainer.style.display === "none") {
+      formContainer.style.display = "block";
+      searchButton.style.display = "none"; // Oculta o botão
+    } else {
+      formContainer.style.display = "none";
+      searchButton.style.display = "inline-block"; // Mostra o botão
+    }
+  }
+</script>
 {% endblock %}
