--- a/items/templates/items/items_historico.html
+++ b/items/templates/items/items_historico.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="{% static 'css/items_historico.css' %}">
 {% endblock %}
 
-{% block main %} 
+{% block content %} 
 
     <h1>Histórico de ações realizadas dentro do sistema</h1>
 
