--- a/items/templates/items/items_search.html
+++ b/items/templates/items/items_search.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/items_search.css' %}" />
 {% endblock %} 
 
-{% block main %}
+{% block content %}
 
     <!-- Botão para abrir o formulário de pesquisa -->
     <button id="searchButton" onclick="toggleSearchForm()" class="search-bar">
