--- a/items/templates/items/base.html
+++ b/items/templates/items/base.html
@@ -8,26 +8,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>{% block title %}Gerenciamento de Almoxarifado{% endblock %}</title>
+    <title> 
+      Gerenciamento de Almoxarifado
+      {% block title %}{% endblock %}
+    </title>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-      rel="stylesheet" />
-
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"rel="stylesheet" />  {% comment%} Biblioteca de fontes {% endcomment %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>                  {% comment%} Biblioteca de ícones {% endcomment %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>                                        {% comment%} Cria gráficos dinâmicos {% endcomment %}
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>                                  {% comment%} Simplifica tarefas com mainpulações - requisições AJAX {% endcomment %}
+    
+     {% comment%} Arquivos Bootstraps {% endcomment %}
+    {% comment %} <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script> {% endcomment %}
+    {% comment %} <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> {% endcomment %}
 
     <script src="{% static 'js/funcoes.js' %}"></script>
 
@@ -39,29 +34,23 @@
 
     <header>
       <a class="din" href="{% url 'items_main' %}">
-        <img class="logo-din" src="{% static 'img/logo-din.png' %}" alt="Logo"/>
+        <img src="{% static 'img/logo-din.png' %}" alt="Logo DIN"/>
+        <img src="{% static 'img/logo-uem.png' %}" alt="Logo UEM"/>
       </a>
 
-      <a class="uem" href="{% url 'items_main' %}">
-        <img
-          class="logo-uem"
-          src="{% static 'img/logo-uem.png' %}"
-          alt="Logo"
-        />
-      </a>
+      <div class="menu">
+
+        <a href="{% url 'items_search' %}">Pesquisar</a>
+        <a href="{% url 'items-auditLog' %}">Histórico</a>
+        <a href="#">Dashboard</a>
+        <form action="{% url 'logout' %}" method="post">
+          {% csrf_token %}
+          <button class="button_logout" type="submit">Sair</button>
+        </form>
+  
+      </div>
     </header>
 
-    <div class="menu">
-
-      <a href="{% url 'items_search' %}">Pesquisar</a>
-      <a href="{% url 'items-auditLog' %}">Histórico</a>
-      <a href="#">Dashboard</a>
-      <form action="{% url 'logout' %}" method="post">
-        {% csrf_token %}
-        <button class="button_logout" type="submit">Sair</button>
-      </form>
-
-    </div>
 
     <main>
       {% block content %} {% endblock %}
