Padronização items_main.html e items_main.css

--- a/items/templates/items/items_main.html
+++ b/items/templates/items/items_main.html
@@ -2,12 +2,12 @@
 
 {% load static %}
 
-{% block title %}Lista de itens{% endblock %}
+{% block title %} Lista de itens {% endblock %}
 {% block extra_styles %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/items_main.css' %}">
 {% endblock %}
 
-{% block content %}
+{% block main %}
 
   <div class="container">
     <h1>Lista de Itens</h1>
