--- a/items/templates/items/base.html
+++ b/items/templates/items/base.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>                                        {% comment%} Cria gráficos dinâmicos {% endcomment %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>                                  {% comment%} Simplifica tarefas com mainpulações - requisições AJAX {% endcomment %}
     
-     {% comment%} Arquivos Bootstraps {% endcomment %}
+    {% comment%} Arquivos Bootstraps {% endcomment %}
     {% comment %} <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script> {% endcomment %}
     {% comment %} <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> {% endcomment %}
 
@@ -52,9 +52,7 @@
     </header>
 
 
-    <main>
-      {% block content %} {% endblock %}
-    </main>
+    <main>{% block main %} {% endblock %}</main>
 
     <script src="{% static 'js/funcoes.js' %}"></script>
 
