--- a/items/staticfiles/css/items_form.css
+++ b/items/staticfiles/css/items_form.css
@@ -1,66 +1,20 @@
-.container {
-  max-width: 800px;
-  margin: 50px;
-  border-radius: 5px;
+main .container {
   box-shadow: 0px 1px 8px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.container h1 {
-  color: black;
-  font-weight: 400;
-  margin: 30px;
-
-}
-
-form {
-  width: 100%;
-  padding: 10px;
-  margin-left: 40px;
-}
-
-.form-group {
-  margin-bottom: 2rem;
-}
-
-/* Labels específicos para formulários */
-.form-group label {
-  font-size: 20px;
-  font-weight: 600;
-  margin: 5px;
-  color: #333;
+  padding: 30px;
+  border-radius: 5px;
 }
 
 
-input[type="text"],
-input[type="number"],
-.form-control {
-  width: calc(100% - 50px); /* Ajusta a largura para deixar espaço para o botão */
-  margin-top: 20px;
-  padding: 10px;
-  font-size: 18px;
-}
-
-.form-text {
-  font-size: 0.9em;
-  color: #ff0000; /* Cinza claro */
-  padding-left: 10px;
-}
-
-.menu-btn {
-  width: calc(100% - 50px);
+main .container form .menu-btn {
   display: flex;
   justify-content: space-between;
 
 }
 
-main .btn-save {
-  width: 50%;
-
-}
-
+main .container form .menu-btn button, 
 main .btn-cancelar {
   width: 50%;
 }
