Padronição do template e css das subs páginas de categorias

--- a/items/staticfiles/css/items_main.css
+++ b/items/staticfiles/css/items_main.css
@@ -14,6 +14,7 @@ main .container form .expandable-list a {
   border: 1px solid #ccc;
   padding: 10px;
   font-size: 1.9rem;
+  font-weight: 400;
 }
 
 main .container form .expandable-list .disabled-link {
