--- a/items/staticfiles/css/base.css
+++ b/items/staticfiles/css/base.css
@@ -84,6 +84,11 @@ main {
   margin-top: 100px;
 }
 
+main .container {
+  box-shadow: 0px 1px 8px 8px rgba(0, 0, 0, 0.1);
+
+}
+
 main .container h1 {
   font-size: 3rem;
   text-align: center;
@@ -149,7 +154,7 @@ main .container form .form-control {
 
 main .container .btn,
 main .container a,
-main .container form .menu-btn button{
+main .container form .menu-btn button {
   color: white;
   text-align: center;
   text-decoration: none;
@@ -157,6 +162,7 @@ main .container form .menu-btn button{
   padding: 8px 12px;
   margin: 20px 5px;
   border-radius: 5px;
+  font-weight: 600;
 }
 
 
@@ -165,9 +171,14 @@ main .container .btn-save {
   color: black;
 }
 
-main .container .btn-cancelar {
+main .container .btn-cancelar,
+main .container .btn-delete {
   background-color: red;
   color: black;
+}
+
+main .container .btn:hover {
+  background-color: #49535f;
 }
 
 
