--- a/items/templates/items/pag_subs_category/items_material_consumo.html
+++ b/items/templates/items/pag_subs_category/items_material_consumo.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="{% static 'css/items_sub.css' %}">
 {% endblock %}
 
-{% block content %} 
+{% block main %} 
   <div class="container">
-    <h1 class="titulo">Itens na Categoria: {{ request.resolver_match.kwargs.category }}</h1>
+    <h1>{{ request.resolver_match.kwargs.category }}</h1>
 
     {% if item_material_consumo_list %}
       <form>
