--- a/items/templates/items/pag_subs_category/items_ferramentas.html
+++ b/items/templates/items/pag_subs_category/items_ferramentas.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Sub Itens{% endblock %}
+{% block title %}{{ request.resolver_match.kwargs.category }}{% endblock %}
 {% block extra_styles %}
   <link rel="stylesheet" href="{% static 'css/items_sub.css' %}">
 {% endblock %}
@@ -10,7 +10,6 @@
 {% block main %} 
   <div class="container">
     <h1>{{ request.resolver_match.kwargs.category }}S</h1>
-    <h2>Sub-Categorias: </h2>
 
     {% if item_ferramenta_list %}
       <form>
