--- a/items/templates/items/pag_subs_category/items_informatica.html
+++ b/items/templates/items/pag_subs_category/items_informatica.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Sub items{% endblock %}
+{% block title %}{{ request.resolver_match.kwargs.category }}{% endblock %}
 {% block extra_styles %}
   <link rel="stylesheet" href="{% static 'css/items_sub.css' %}">
 {% endblock %}
@@ -11,7 +11,6 @@
 
   <div class="container">
     <h1>{{ request.resolver_match.kwargs.category }}</h1>
-    <h2>Sub-Categorias: </h2>
 
     {% if item_informatica_list %}
       <form>
