--- a/items/templates/items/items_form.html
+++ b/items/templates/items/items_form.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block title %}Cadastro de Itens{% endblock %}
+{% block title %} {{title}} {% endblock %}
 {% block extra_styles %}
   <link rel="stylesheet" href="{% static 'css/items_form.css' %}">
 {% endblock %}
@@ -12,7 +12,7 @@
 
   <div class="container">
 
-    <h1>{{ title }}</h1>
+    <h1>{{title}}</h1>
     
     <!-- Formulário de Atualização -->
     {% if object.pk %}
