--- a/items/templates/items/pag_subs_category/items_material_instalacao.html
+++ b/items/templates/items/pag_subs_category/items_material_instalacao.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Sub Itens{% endblock %}
+{% block title %}{{ request.resolver_match.kwargs.category }}{% endblock %}
 {% block extra_styles %}
   <link rel="stylesheet" href="{% static 'css/items_sub.css' %}">
 {% endblock %}
